--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,23 @@ targetCompatibility = 1.8
 
 compileJava.options.encoding = 'UTF-8'
 
+ext {
+    paymentMethodApiVersion = '1.3'
+    paymentMethodIntegrationVersion = '1.3-SNAPSHOT'
+}
+
 dependencies {
-    compile group: 'org.tomitribe', name: 'tomitribe-http-signatures', version: '1.3'
+    compile group:'com.payline', name: 'payment-method-api', version: "$paymentMethodApiVersion"
+
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.0'
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.9'
+    implementation group: 'org.tomitribe', name: 'tomitribe-http-signatures', version: '1.3'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.0.0'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.0'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.5.0'
 }
 
 jar {
@@ -41,4 +56,9 @@ jar {
                 'Target-Compatibility': project.targetCompatibility
         )
     }
+}
+
+test {
+    useJUnitPlatform()
+    exclude('**/*IT.class')
 }
