Renommage du package equens

--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ if (file(externalFileName).exists()) {
     apply from: "monext.gradle"
 }
 
-description = 'payment-method-equensworldline'
-group = 'com.payline.payment.equensworldline'
+description = 'payment-method-equens'
+group = 'com.payline.payment.equens'
 version = '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
