Chemins des endpoints des API partenaires placés en fichier de config (issues Sonar)

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -18,3 +18,9 @@ logo.filename=
 logo.format=
 logo.height=
 logo.width=
+
+# --- Partner API ---
+api.pis.aspsps=/directory/v1/aspsps
+api.pis.payments=/pis/v1/payments
+api.pis.payments.status=/pis/v1/payments/{paymentId}/status
+api.psu.psus=/psumgmt/v1/psus
