Prise en compte des remarques de relecture de JFL

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -13,6 +13,7 @@ http.retries=3
 i18n.defaultLocale=en
 
 # --- Logo ---
+# TODO: fill theses values when the logo is available
 logo.contentType=
 logo.filename=
 logo.format=
