--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,20 @@ jar {
     }
 }
 
+assemble.dependsOn shadowJar
+
+shadowJar {
+    classifier = ''
+    dependencies {
+        exclude(dependency('com.payline:payment-method-api'))
+        exclude(dependency('org.apache.logging.log4j:log4j-api:2.11.0'))
+        exclude(dependency('org.apache.logging.log4j:log4j-core:2.11.0'))
+
+        exclude(dependency('org.junit.jupiter:junit-jupiter-params'))
+        exclude(dependency('org.junit.jupiter:junit-jupiter-api'))
+    }
+}
+
 processResources {
     // Replace tokens in release.properties file by their real value
     filesMatching('release.properties') {
