Utilisation du logo fourni par Jonathan

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -13,12 +13,11 @@ http.retries=3
 i18n.defaultLocale=en
 
 # --- Logo ---
-# TODO: fill theses values when the logo is available
-logo.contentType=
-logo.filename=
-logo.format=
-logo.height=
-logo.width=
+logo.contentType=image/png
+logo.filename=Logo-horizontal-grand.png
+logo.format=png
+logo.height=50
+logo.width=165
 
 # --- Partner API ---
 api.pis.aspsps=/directory/v1/aspsps
