--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ if (file(externalFileName).exists()) {
 
 description = 'payment-method-equens'
 group = 'com.payline.payment.scti-equens'
-version = '1.3-SNAPSHOT'
+version = '1.3'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -28,7 +28,7 @@ targetCompatibility = 1.8
 compileJava.options.encoding = 'UTF-8'
 
 ext {
-    paymentMethodApiVersion = '1.7-SNAPSHOT'
+    paymentMethodApiVersion = '1.7'
     paymentMethodIntegrationVersion = '1.4'
 }
 
