--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 import org.apache.tools.ant.filters.ReplaceTokens
-
 plugins {
     id "com.github.johnrengelman.shadow" version "4.0.3"
     id "org.sonarqube" version "2.8"
@@ -20,7 +19,7 @@ if (file(externalFileName).exists()) {
 
 description = 'payment-method-equens'
 group = 'com.payline.payment.scti-equens'
-version = '1.3'
+version = '1.4-SNAPSHOT'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -28,7 +27,7 @@ targetCompatibility = 1.8
 compileJava.options.encoding = 'UTF-8'
 
 ext {
-    paymentMethodApiVersion = '1.7'
+    paymentMethodApiVersion = '1.8-SNAPSHOT'
     paymentMethodIntegrationVersion = '1.4'
 }
 
