--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -19,6 +19,13 @@ logo.format=png
 logo.height=50
 logo.width=165
 
+# --- Logo Wallet ---
+logoWallet.contentType=image/png
+logoWallet.filename=Logo-horizontal-grand.png
+logoWallet.format=png
+logoWallet.ratio=70
+
+
 # --- Partner API ---
 api.pis.aspsps=/directory/v1/aspsps
 api.pis.payments=/pis/v1/payments
