rajout de l'affichage de l'IBAN si l'utilisateur a rentré son IBAN lors de la création d'un Wallet

--- a/build.gradle
+++ b/build.gradle
@@ -93,3 +93,9 @@ dependencyCheck {
     format 'ALL'
     skipConfigurations = ['jacocoAgent', 'jacocoAnt', 'annotationProcessor', 'axisGenAntTask', 'jaxws', 'execJar', 'jaxb', 'generateSources']
 }
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+    }
+}
