--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,12 @@ jar {
     }
 }
 
+jacocoTestReport {
+    reports {
+        xml.enabled true
+    }
+}
+
 assemble.dependsOn shadowJar
 
 shadowJar {
