--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 description = payment-method-equens
 group = com.payline.payment.scti-equens
-version = 1.10
+version = 1.11-SNAPSHOT
 
 paymentMethodApiVersion = 1.9
 gsonVersion = 2.8.5
