--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -27,7 +27,7 @@ logoWallet.ratio=70
 
 
 # --- Partner API ---
-api.pis.aspsps=/directory/v1/aspsps
+api.pis.aspsps=/directory/v1/aspsps?allDetails=true
 api.pis.payments=/pis/v1/payments
 api.pis.payments.status=/pis/v1/payments/{paymentId}/status
 api.psu.psus=/psumgmt/v1/psus
